fix: main page, detail page